--- a/requirements.txt
+++ b/requirements.txt
@@ -1,80 +1,82 @@
 altair==4.1.0
+argon2-cffi==20.1.0
 astor==0.8.1
-attrs==19.3.0
+async-generator==1.10
+attrs==20.3.0
 backcall==0.2.0
 base58==2.0.1
-bleach==3.1.5
+bleach==3.2.1
 blinker==1.4
-boto3==1.14.29
-botocore==1.17.29
-cachetools==4.1.1
-certifi==2020.6.20
-chardet==3.0.4
+cachetools==4.2.0
+certifi==2020.12.5
+cffi==1.14.4
+chardet==4.0.0
 click==7.1.2
-cutlet==0.1.14
-Cython==0.29.21
+cutlet==0.1.15
 decorator==4.4.2
 defusedxml==0.6.0
-docutils==0.15.2
 entrypoints==0.3
-enum-compat==0.0.3
-fugashi==1.0.2
+fugashi==1.0.5
+gitdb==4.0.5
+GitPython==3.1.11
 idna==2.10
-ipykernel==5.3.4
-ipython==7.16.1
+ipykernel==5.4.2
+ipython==7.19.0
 ipython-genutils==0.2.0
-ipywidgets==7.5.1
+ipywidgets==7.6.2
 jaconv==0.2.4
-jedi==0.17.2
+jedi==0.18.0
 Jinja2==2.11.2
-jmespath==0.10.0
 jsonschema==3.2.0
-jupyter-client==6.1.6
-jupyter-core==4.6.3
+jupyter-client==6.1.7
+jupyter-core==4.7.0
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.0.0
 MarkupSafe==1.1.1
 mistune==0.8.4
 mojimoji==0.0.11
-nbconvert==5.6.1
-nbformat==5.0.7
-notebook==6.0.3
-numpy==1.19.1
-packaging==20.4
-pandas==1.0.5
-pandocfilters==1.4.2
-parso==0.7.1
-pathtools==0.1.2
+nbclient==0.5.1
+nbconvert==6.0.7
+nbformat==5.0.8
+nest-asyncio==1.4.3
+notebook==6.1.6
+numpy==1.19.4
+packaging==20.8
+pandas==1.2.0
+pandocfilters==1.4.3
+parso==0.8.1
 pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==7.2.0
-prometheus-client==0.8.0
-prompt-toolkit==3.0.5
-protobuf==3.12.2
-ptyprocess==0.6.0
-pyarrow==1.0.0
-pydeck==0.4.0
-Pygments==2.6.1
+Pillow==8.1.0
+prometheus-client==0.9.0
+prompt-toolkit==3.0.8
+protobuf==3.14.0
+ptyprocess==0.7.0
+pycparser==2.20
+pydeck==0.5.0
+Pygments==2.7.3
 pyparsing==2.4.7
-pyrsistent==0.16.0
+pyrsistent==0.17.3
+pysbd==0.3.3
 python-dateutil==2.8.1
-pytz==2020.1
-pyzmq==19.0.1
-requests==2.24.0
-s3transfer==0.3.3
+pytz==2020.5
+pyzmq==20.0.0
+requests==2.25.1
 Send2Trash==1.5.0
-setuptools-scm==4.1.2
 six==1.15.0
-streamlit==0.65.1
-terminado==0.8.3
+smmap==3.0.4
+streamlit==0.73.1
+terminado==0.9.1
 testpath==0.4.4
-toml==0.10.1
-toolz==0.10.0
-tornado==6.0.4
-traitlets==4.3.3
+toml==0.10.2
+toolz==0.11.1
+tornado==6.1
+traitlets==5.0.5
 tzlocal==2.1
-unidic-lite==1.0.6
-urllib3==1.25.10
-validators==0.16.0
-watchdog==0.10.3
+unidic-lite==1.0.7
+urllib3==1.26.2
+validators==0.18.2
+watchdog==1.0.2
 wcwidth==0.2.5
 webencodings==0.5.1
 widgetsnbextension==3.5.1
